tests/NormalTests/paczka1/fuzzy1/67347236.err
Error in line 20: R6XAbod4r S438 144,91
Error in line 28: cSj8 S780 35,7
Error in line 26: 8Zrz2CZ A567 30,5
